--- a/src/modulo-04-c-sharp/dia-02/DbFuncionarios/DbFuncionarios/DbFuncionarios.csproj
+++ b/src/modulo-04-c-sharp/dia-02/DbFuncionarios/DbFuncionarios/DbFuncionarios.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DbFuncionarios</RootNamespace>
     <AssemblyName>DbFuncionarios</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,6 +47,7 @@
     <Compile Include="BaseDeDados.cs" />
     <Compile Include="Cargo.cs" />
     <Compile Include="Funcionario.cs" />
+    <Compile Include="Funcionarios.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TurnoTrabalho.cs" />
