--- a/src/modulo-04-c-sharp/dia-03/LocadoraDeJogos/LocadoraDeJogos.Dominio/LocadoraDeJogos.Dominio.csproj
+++ b/src/modulo-04-c-sharp/dia-03/LocadoraDeJogos/LocadoraDeJogos.Dominio/LocadoraDeJogos.Dominio.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Categoria.cs" />
+    <Compile Include="CustomExceptionLogger.cs" />
     <Compile Include="JogoModel.cs" />
     <Compile Include="ListaDeJogos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
