--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Web.config
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="LOCADORA" connectionString="Server=NB-002683\SQLEXPRESS;Database=LocadoraTopGames;Trusted_Connection=True;"/>
+    <add name="LOCADORA" connectionString="Server=JULIO\SQLEXPRESS;Database=LocadoraTopGames;Trusted_Connection=True;"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
@@ -43,7 +43,7 @@
   </runtime>
   <system.codedom>
     <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4" compilerOptions="/langversion:6 /nowarn:1659;1699;1701">
+      <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CSharp.CSharpCodeProvider, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" warningLevel="4" compilerOptions="/langversion:5 /nowarn:1659;1699;1701">
           <providerOption name="CompilerVersion" value="v4.0"/>
       </compiler>
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
