--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Web.config
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="LOCADORA" connectionString="Server=JULIO\SQLEXPRESS;Database=LocadoraTopGames;Trusted_Connection=True;"/>
+    <add name="LOCADORA" connectionString="Server=NB-002683\SQLEXPRESS;Database=LocadoraTopGames;User Id=sa;Password=Crescer$5;"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
