--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Dominio.Test/Locadora.Dominio.Test.csproj
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Dominio.Test/Locadora.Dominio.Test.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="JogoRepositorioTest.cs" />
     <Compile Include="JogoTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -58,6 +59,14 @@
     <ProjectReference Include="..\Locadora.Dominio\Locadora.Dominio.csproj">
       <Project>{93d95d00-78c7-4b77-be44-686ab7a29c7c}</Project>
       <Name>Locadora.Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Locadora.Repositorio.ADO\Locadora.Repositorio.ADO.csproj">
+      <Project>{14105bc9-3336-43bc-b394-6e0aa2a29751}</Project>
+      <Name>Locadora.Repositorio.ADO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Locadora.Repositorio.XML\Locadora.Repositorio.XML.csproj">
+      <Project>{94e11ed9-d5fd-4339-9fcd-dd1d3ff1badd}</Project>
+      <Name>Locadora.Repositorio.XML</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
