--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Web.config
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Web.config
@@ -4,9 +4,13 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <connectionStrings>
     <!--<add name="LOCADORA" connectionString="Server=NB-002683\SQLEXPRESS;Database=LocadoraTopGames;User Id=sa;Password=Crescer$5;"/>-->
-    <add name="LOCADORA" connectionString="Server=JULIO\SQLEXPRESS;Database=LocadoraTopGames;Trusted_Connection=True;" />
+    <add name="LOCADORA_NOVA" connectionString="Server=NB-002683\SQLEXPRESS;Database=LocadoraNova;User Id=sa;Password=Crescer$5;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -54,4 +58,10 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
