--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
@@ -61,9 +61,12 @@
     <Compile Include="Migrations\201511091915292_Initial.Designer.cs">
       <DependentUpon>201511091915292_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511101732183_Login.cs" />
+    <Compile Include="Migrations\201511101732183_Login.Designer.cs">
+      <DependentUpon>201511101732183_Login.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SqlDatabaseSetup.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Locadora.Dominio\Locadora.Dominio.csproj">
@@ -78,6 +81,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201511091915292_Initial.resx">
       <DependentUpon>201511091915292_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511101732183_Login.resx">
+      <DependentUpon>201511101732183_Login.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
