--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Dominio/Locadora.Dominio.csproj
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Dominio/Locadora.Dominio.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Relatorio.cs" />
     <Compile Include="Repositorio\IRepositorio.cs" />
+    <Compile Include="Repositorio\IRepositorioUsuario.cs" />
     <Compile Include="Selo.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
