--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/web.config
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/web.config
@@ -18,7 +18,8 @@
                 <add namespace="System.Web.Routing" />
                 <add namespace="Locadora.Web.MVC" />
                 <add namespace="Locadora.Web.MVC.Models" />
-              <add namespace="System.Web.Optimization" />
+                <add namespace="System.Web.Optimization" />
+              <add namespace="Locadora.Web.MVC.Security.Models"/>
             </namespaces>
         </pages>
     </system.web.webPages.razor>
