--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
@@ -65,8 +65,14 @@
     <Compile Include="Migrations\201511101732183_Login.Designer.cs">
       <DependentUpon>201511101732183_Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511111234060_Permissoes.cs" />
+    <Compile Include="Migrations\201511111234060_Permissoes.Designer.cs">
+      <DependentUpon>201511111234060_Permissoes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="PermissaoRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioRepositorio.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Locadora.Dominio\Locadora.Dominio.csproj">
@@ -84,6 +90,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201511101732183_Login.resx">
       <DependentUpon>201511101732183_Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511111234060_Permissoes.resx">
+      <DependentUpon>201511111234060_Permissoes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
