--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Dominio/Locadora.Dominio.csproj
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Dominio/Locadora.Dominio.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Repositorio\IRepositorioPermissao.cs" />
     <Compile Include="Repositorio\IRepositorioUsuario.cs" />
     <Compile Include="Selo.cs" />
+    <Compile Include="Serviços\IServicoCriptografia.cs" />
+    <Compile Include="Serviços\ServicoAutenticacao.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
