--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Locadora.Web.MVC.csproj
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Locadora.Web.MVC.csproj
@@ -139,15 +139,16 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\Construtor.cs" />
     <Compile Include="Models\DescricaoJogoModel.cs" />
     <Compile Include="Models\JogoModel.cs" />
     <Compile Include="Models\ManterJogoModel.cs" />
     <Compile Include="Models\RelatorioJogosModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Autorizador.cs" />
-    <Compile Include="Security\Codificador.cs" />
-    <Compile Include="Security\Models\UsuarioCadastroModel.cs" />
-    <Compile Include="Security\Models\UsuarioModel.cs" />
+    <Compile Include="Models\UsuarioCadastroModel.cs" />
+    <Compile Include="Models\UsuarioModel.cs" />
+    <Compile Include="Security\UsuarioLogado.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config">
@@ -180,6 +181,10 @@
     <ProjectReference Include="..\Locadora.Dominio\Locadora.Dominio.csproj">
       <Project>{93d95d00-78c7-4b77-be44-686ab7a29c7c}</Project>
       <Name>Locadora.Dominio</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Locadora.Infraestrutura.Servicos\Locadora.Infraestrutura.Servicos.csproj">
+      <Project>{8dab2d6d-8171-49fc-8d46-27a22e5704ef}</Project>
+      <Name>Locadora.Infraestrutura.Servicos</Name>
     </ProjectReference>
     <ProjectReference Include="..\Locadora.Repositorio.EF\Locadora.Repositorio.EF.csproj">
       <Project>{8a825926-d6a4-49f1-b2ed-bab296ae6a93}</Project>
