fixes(Locadora): correções

--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/web.config
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Web.MVC/Views/web.config
@@ -19,7 +19,7 @@
                 <add namespace="Locadora.Web.MVC" />
                 <add namespace="Locadora.Web.MVC.Models" />
                 <add namespace="System.Web.Optimization" />
-              <add namespace="Locadora.Web.MVC.Security.Models"/>
+              <add namespace="Locadora.Web.MVC.Security"/>
             </namespaces>
         </pages>
     </system.web.webPages.razor>
