--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
@@ -54,9 +54,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BancoDeDados.cs" />
-    <Compile Include="Class1.cs" />
-    <Compile Include="ClienteRepositorio.cs" />
-    <Compile Include="JogoRepositorio.cs" />
+    <Compile Include="Migrations\201511121806313_SeloId.cs" />
+    <Compile Include="Migrations\201511121806313_SeloId.Designer.cs">
+      <DependentUpon>201511121806313_SeloId.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Repositorios\ClienteRepositorio.cs" />
+    <Compile Include="Repositorios\JogoRepositorio.cs" />
     <Compile Include="Migrations\201511091915292_Initial.cs" />
     <Compile Include="Migrations\201511091915292_Initial.Designer.cs">
       <DependentUpon>201511091915292_Initial.cs</DependentUpon>
@@ -77,10 +80,15 @@
     <Compile Include="Migrations\201511112355188_Jogo.Descricao-2048.Designer.cs">
       <DependentUpon>201511112355188_Jogo.Descricao-2048.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511121652525_SeloAlteração.cs" />
+    <Compile Include="Migrations\201511121652525_SeloAlteração.Designer.cs">
+      <DependentUpon>201511121652525_SeloAlteração.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="PermissaoRepositorio.cs" />
+    <Compile Include="Repositorios\PermissaoRepositorio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UsuarioRepositorio.cs" />
+    <Compile Include="Repositorios\SeloRepositorio.cs" />
+    <Compile Include="Repositorios\UsuarioRepositorio.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Locadora.Dominio\Locadora.Dominio.csproj">
@@ -107,6 +115,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201511112355188_Jogo.Descricao-2048.resx">
       <DependentUpon>201511112355188_Jogo.Descricao-2048.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511121652525_SeloAlteração.resx">
+      <DependentUpon>201511121652525_SeloAlteração.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511121806313_SeloId.resx">
+      <DependentUpon>201511121806313_SeloId.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
