--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Dominio/Locadora.Dominio.csproj
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Dominio/Locadora.Dominio.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Cliente.cs" />
     <Compile Include="EntidadeBase.cs" />
     <Compile Include="Jogo.cs" />
+    <Compile Include="Locacao.cs" />
     <Compile Include="Permissao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Relatorio.cs" />
@@ -54,6 +55,8 @@
     <Compile Include="Selo.cs" />
     <Compile Include="Serviços\IServicoCriptografia.cs" />
     <Compile Include="Serviços\ServicoAutenticacao.cs" />
+    <Compile Include="Serviços\ServicoLocacao.cs" />
+    <Compile Include="Situacao.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
   <ItemGroup>
