--- a/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
+++ b/src/modulo-04-c-sharp/LocadoraDeJogos/Locadora.Repositorio.EF/Locadora.Repositorio.EF.csproj
@@ -66,6 +66,10 @@
     <Compile Include="Migrations\201511130032335_SeloDuracaoLocacao.Designer.cs">
       <DependentUpon>201511130032335_SeloDuracaoLocacao.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201511130158456_ClienteJogosLocados.cs" />
+    <Compile Include="Migrations\201511130158456_ClienteJogosLocados.Designer.cs">
+      <DependentUpon>201511130158456_ClienteJogosLocados.cs</DependentUpon>
+    </Compile>
     <Compile Include="Repositorios\ClienteRepositorio.cs" />
     <Compile Include="Repositorios\JogoRepositorio.cs" />
     <Compile Include="Migrations\201511091915292_Initial.cs" />
@@ -136,6 +140,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201511130032335_SeloDuracaoLocacao.resx">
       <DependentUpon>201511130032335_SeloDuracaoLocacao.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201511130158456_ClienteJogosLocados.resx">
+      <DependentUpon>201511130158456_ClienteJogosLocados.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
